# ChangeLog for dev-java/plexus-utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Apr 2007; kiorky <kiorky@cryptelium.net> plexus-classworlds-1.2.ebuild:
  Migrating to new maven eclass

  17 Apr 2007; kiorky <kiorky@cryptelium.net>
  +plexus-classworlds-1.2.ebuild, +metadata.xml:
  added as a maven dependency
