@@ -1,4 +1,4 @@
 DIST plexus-classworlds-1.2.tar.bz2 1186492 RMD160 15e9bd37c4a549a726ae578bee4ee4566f0eafab SHA1 bf56b656e3107a9fc4465f6a2560851048f924ef SHA256 ffa5b916dca738834f82072a0e18f0aadbbb7509ea0941e67997d2c0d246ed70
-EBUILD plexus-classworlds-1.2.ebuild 536 RMD160 85d31275e499e7c6804c3c3457a5aa130e429f32 SHA1 bcca43782a17cce846c2b7e2f90db331bc39f98b SHA256 f4afb2103e8035f40bf4af9f6266e8454700299920d70b5d1413498b0ee5c4ac
-MISC ChangeLog 358 RMD160 9b5c164bea723a58e7aeebaf86da6b4666e7349f SHA1 0ffc8abf33f8863f2315ab43ea6c140aa8f17890 SHA256 d061b88dbf8295415cec4a059aa4451f6f7ac40772743397c6448b22fadbcf3f
+EBUILD plexus-classworlds-1.2.ebuild 593 RMD160 dda6f5c474b6f7debe95b2071396084766516fb5 SHA1 7f594811d7954445311210653ac5e162c4b121ac SHA256 6280ed1da390aed9ba4393cd16c75ffda3c7b86fdf91519ab5e75b50c6c98a0a
+MISC ChangeLog 467 RMD160 854a39edea315f3a7258d4c7d1670a20c0834653 SHA1 30078151bf4c6371c058a50475d4ec8910e70229 SHA256 2bcb6673a2aaac89524934342fe809626eea00e9b435e9ee49136389e30dc7da
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
