@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source"
+
 inherit java-maven-2
 
 DESCRIPTION="The Plexus project provides a full software stack for creating and executing software projects."
@@ -10,6 +12,8 @@ SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 LICENSE="as-is" # http://plexus.codehaus.org/plexus-utils/license.html
 SLOT="0"
 KEYWORDS="~x86"
-IUSE="source"
+IUSE=""
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
+
+JAVA_PKG_SRC_DIRS="src/main/java/org"
