@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 May 2007; Alistair John Bush <ali_bush@gentoo.org>
+  plexus-classworlds-1.2.ebuild:
+  Adding to ~amd64
+
   25 Apr 2007; kiorky <kiorky@cryptelium.net> plexus-classworlds-1.2.ebuild:
   Migrating to new maven eclass
 
